--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ausi/slug-generator": "^1.1",
+        "doctrine/coding-standard": "^8.1",
+        "doctrine/data-fixtures": "^1.4",
+        "doctrine/orm": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -24,13 +27,14 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "doctrine/doctrine-fixtures-bundle": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
