--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "ausi/slug-generator": "^1.1",
         "doctrine/coding-standard": "^8.1",
         "doctrine/data-fixtures": "^1.4",
+        "doctrine/doctrine-fixtures-bundle": "*",
         "doctrine/orm": "^2.7",
+        "fzaninotto/faker": "^1.9",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -28,7 +30,7 @@
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
         "symfony/yaml": "4.2.*",
-        "doctrine/doctrine-fixtures-bundle": "*"
+        "knplabs/knp-paginator-bundle": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
